v0.3.0 - feature: game stats.  fix to last crash bug.  fix to fix to last crash bug.  more player colors.  fix to (#34) gamechat overlaid while wrapping status.  fix to (#2) left sidebar sorting.  maybe.  new footer component & changelog.

--- a/src/scss/changelog.scss
+++ b/src/scss/changelog.scss
@@ -1,5 +1,5 @@
 .changelog {
-
+	color: #c36563;
 	padding: 2%;
 
 	.remove.icon {
