--- a/src/scss/rightsidebar.scss
+++ b/src/scss/rightsidebar.scss
@@ -55,6 +55,11 @@
 							color: #da65e5 !important;
 							font-weight: bold;
 						}
+
+						.experienced.veryonfire, .veryexperienced.veryonfire, .veryveryexperienced.veryonfire .superexperienced.veryonfire {
+							color: #b703a7 !important;
+							font-weight: bold;
+						}
         }
         .ui.header {
             padding-left: 5px;
