--- a/src/scss/style-dark.scss
+++ b/src/scss/style-dark.scss
@@ -51,7 +51,7 @@ $dteal: #034f61;
 				p {
 					position: absolute;
 					bottom: 0;
-					left: 15%;
+					left: 4%;
 					color: #bbb;
 					
 					a {
@@ -60,6 +60,10 @@ $dteal: #034f61;
 					}
 					a:first-child {
 						color: yellow;
+					}
+
+					a:last-child {
+						color: #d86363;
 					}
 				}
     }
